# rawg-datapipeline

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
rawg_datapipeline/etl/: main.py
tests/: test_requests.py
